@@ -488,27 +488,6 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3200e40 	vcgt\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3200e40 	vcgt\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3200e00 	vcgt\.f32	d0, d0, d0
-0[0-9a-f]+ <[^>]+> f2000340 	vcgt\.s8	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f2000340 	vcgt\.s8	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f2000300 	vcgt\.s8	d0, d0, d0
-0[0-9a-f]+ <[^>]+> f2100340 	vcgt\.s16	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f2100340 	vcgt\.s16	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f2100300 	vcgt\.s16	d0, d0, d0
-0[0-9a-f]+ <[^>]+> f2200340 	vcgt\.s32	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f2200340 	vcgt\.s32	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f2200300 	vcgt\.s32	d0, d0, d0
-0[0-9a-f]+ <[^>]+> f3000340 	vcgt\.u8	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f3000340 	vcgt\.u8	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f3000300 	vcgt\.u8	d0, d0, d0
-0[0-9a-f]+ <[^>]+> f3100340 	vcgt\.u16	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f3100340 	vcgt\.u16	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f3100300 	vcgt\.u16	d0, d0, d0
-0[0-9a-f]+ <[^>]+> f3200340 	vcgt\.u32	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f3200340 	vcgt\.u32	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f3200300 	vcgt\.u32	d0, d0, d0
-0[0-9a-f]+ <[^>]+> f3200e40 	vcgt\.f32	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f3200e40 	vcgt\.f32	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f3200e00 	vcgt\.f32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f2000350 	vcge\.s8	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2000350 	vcge\.s8	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2000310 	vcge\.s8	d0, d0, d0
@@ -530,6 +509,27 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3000e40 	vcge\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3000e40 	vcge\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3000e00 	vcge\.f32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f2000340 	vcgt\.s8	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2000340 	vcgt\.s8	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2000300 	vcgt\.s8	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f2100340 	vcgt\.s16	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2100340 	vcgt\.s16	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2100300 	vcgt\.s16	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f2200340 	vcgt\.s32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200340 	vcgt\.s32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f2200300 	vcgt\.s32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f3000340 	vcgt\.u8	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3000340 	vcgt\.u8	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3000300 	vcgt\.u8	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f3100340 	vcgt\.u16	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3100340 	vcgt\.u16	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3100300 	vcgt\.u16	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f3200340 	vcgt\.u32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200340 	vcgt\.u32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200300 	vcgt\.u32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f3200e40 	vcgt\.f32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200e40 	vcgt\.f32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200e00 	vcgt\.f32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f3000850 	vceq\.i8	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3000850 	vceq\.i8	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3000810 	vceq\.i8	d0, d0, d0
@@ -802,12 +802,12 @@ Disassembly of section \.text:
 0[0-9a-f]+ <[^>]+> f3200e50 	vacgt\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3200e50 	vacgt\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3200e10 	vacgt\.f32	d0, d0, d0
-0[0-9a-f]+ <[^>]+> f3200e50 	vacgt\.f32	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f3200e50 	vacgt\.f32	q0, q0, q0
-0[0-9a-f]+ <[^>]+> f3200e10 	vacgt\.f32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f3000e50 	vacge\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3000e50 	vacge\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f3000e10 	vacge\.f32	d0, d0, d0
+0[0-9a-f]+ <[^>]+> f3200e50 	vacgt\.f32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200e50 	vacgt\.f32	q0, q0, q0
+0[0-9a-f]+ <[^>]+> f3200e10 	vacgt\.f32	d0, d0, d0
 0[0-9a-f]+ <[^>]+> f2000f50 	vrecps\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2000f50 	vrecps\.f32	q0, q0, q0
 0[0-9a-f]+ <[^>]+> f2000f10 	vrecps\.f32	d0, d0, d0
